<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_download"
            android:drawablePadding="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>



        <TextView
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_share"
            android:drawablePadding="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_delete"
            android:drawablePadding="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground" />
    </LinearLayout>
</LinearLayout>
