<?xml version="1.0" encoding="UTF-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false"
    app:cardPreventCornerOverlap="false"
    android:backgroundTint="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="3dp">

            <TextView
                android:id="@+id/docTypeId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prescription"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/threeDotButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/more_options"
                android:src="@drawable/ic_three_dot" />
        </LinearLayout>


            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/document_date"
                android:textSize="16sp"
                android:paddingEnd="12dp"
                android:textColor="@color/red_ca4f46"/>

        <ImageView
            android:id="@+id/documentImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:clipToOutline="true"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
