<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:contentDescription="App Logo"
                android:scaleType="centerInside"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FinDoc"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>



            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Content goes here"
                android:padding="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:lineSpacingExtra="4dp"/>

        <LinearLayout
            android:id="@+id/contactLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="gone">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvHeading"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_content"
                            android:textSize="18sp"
                            android:paddingBottom="8dp"/>

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email_text"
                            android:textColor="@color/blue_primary"
                            android:textSize="16sp"
                            android:paddingBottom="8dp"/>

                        <TextView
                            android:id="@+id/tvPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_text"
                            android:textColor="@color/blue_primary"
                            android:paddingBottom="8dp"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/tvAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="@color/blue_primary"
                            android:textSize="16sp"/>
                    </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
