<?xml version="1.0" encoding="UTF-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="400dp"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/wave_background" />

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="-1dp"
                    app:cardCornerRadius="95dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/doc_icon"
                        android:contentDescription="Profile Image" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/pink"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/entername">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:drawableLeft="@drawable/user_icon"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    app:endIconMode="clear_text"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:hintTextColor="@color/pink"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/yourage">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_age_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_age"
                        android:inputType="number"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectgen"
                        android:layout_marginLeft="13dp"
                        android:textColor="@color/text_dark"
                        android:textSize="18sp"
                        android:paddingBottom="2dp" />

                    <RadioGroup
                        android:id="@+id/gender_group_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="95dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textSize="18sp" />
                    </RadioGroup>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="center"
                    app:endIconMode="clear_text"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:hintTextColor="@color/pink"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/Entermobilenumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_mobile_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_call"
                        android:inputType="number"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_button_id"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:text="Sign Up"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/blue_primary"
                    app:cornerRadius="50dp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/already_account_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:text="@string/alreadyhave"
                    android:textColor="@color/red_ca4f46"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
